basic layout + header layout

--- a/css/main.css
+++ b/css/main.css
@@ -94,8 +94,4 @@ body {
           flex: 1;
 }
 
-/* Header, Search, User Navigation */
-.user-nav__user-name {
-  font-size: 30px;
-  color: red;
-}/*# sourceMappingURL=main.css.map */
+/* Header, Search, User Navigation *//*# sourceMappingURL=main.css.map */
