--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,39 +1,122 @@
-/* Header, Search, User Navigation */
+/* Header, Search */
 .logo {
   height: 3.25rem;
+  margin-left: 2rem;
 }
 
 .search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  flex: 0 0 40%;
+
   &__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: var(--color-grey-light-2);
+    border: none;
+    border-radius: 100px;
+    padding: 0.7rem 2rem;
+    margin-right: -3.25rem;
+    width: 90%;
+    transition: all 0.2s;
+
+    &:focus {
+      outline: none;
+      width: 100%;
+      background-color: var(--color-grey-light-3);
+    }
+
+    &::placeholder {
+      font-weight: 100;
+      color: var(--color-grey-light-4);
+    }
+  }
+
+  &__input:focus + &__button {
+    background-color: var(--color-grey-light-3);
   }
 
   &__button {
+    border: none;
+    background-color: var(--color-grey-light-2);
+
+    &:focus {
+      outline: none;
+    }
+
+    &:active {
+      transform: translateY(2px);
+    }
   }
 
   &__icon {
     height: 2rem;
     width: 2rem;
+    fill: var(--color-grey-dark-3);
   }
 }
 
+/* USER NAVIGATION */
 .user-nav {
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+
+  & > * {
+    height: 100%;
+    padding: 0 2rem;
+    cursor: pointer;
+
+    /* vertically aligning icons and photo inside icon-box and user */
+    display: flex;
+    align-items: center;
+  }
+
+  & > *:hover {
+    background-color: var(--color-grey-light-2);
+  }
+
   &__icon-box {
+    position: relative;
+    // display: flex;
+    // align-items: center;
   }
 
   &__icon {
     height: 2.25rem;
     width: 2.25rem;
+    fill: var(--color-grey-dark-2);
   }
 
   &__notification {
+    font-size: 0.8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 100px;
+    background-color: var(--primary);
+    color: #fff;
+
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &__user {
+    // display: flex;
+    // align-items: center;
   }
 
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
+    margin-right: 1rem;
   }
 
   &__user-name {
