--- a/sass/components/_hotel-view.scss
+++ b/sass/components/_hotel-view.scss
@@ -15,7 +15,7 @@
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 
   &__heading {
     text-transform: uppercase;
@@ -107,3 +107,5 @@
     box-shadow: none;
   }
 }
+
+// DESCRIPTION //
