--- a/sass/globals/_layout.scss
+++ b/sass/globals/_layout.scss
@@ -11,7 +11,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 
   display: flex;
   justify-content: space-between;
@@ -35,4 +35,24 @@
   background-color: #fff;
   flex: 1;
   height: 80rem;
+}
+
+.details {
+  background-color: var(--color-grey-light-2);
+  padding: 4.5rem;
+  display: flex;
+  border-bottom: var(--line);
+}
+
+.description {
+  background-color: #fff;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+  padding: 3rem;
+  box-shadow: var(--shadow-light);
+}
+
+.user-reviews {
+  background-color: #fff;
+  flex: 1;
 }
