--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,6 @@ body {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  height: 80rem;
 }
 
 .details {
@@ -127,6 +126,7 @@ body {
 }
 
 .description {
+  font-size: 1.4rem;
   background-color: #fff;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 60%;
@@ -490,4 +490,73 @@ body {
     -webkit-box-shadow: none;
             box-shadow: none;
   }
+}
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+.list {
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.list__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+  margin-bottom: 0.7rem;
+}
+.list__item::before {
+  content: "";
+  display: inline-block;
+  height: 1rem;
+  width: 1rem;
+  margin-right: 0.7rem;
+  background-color: var(--primary);
+  -webkit-mask-image: url(../../img/chevron-thin-right.svg);
+          mask-image: url(../../img/chevron-thin-right.svg);
+  -webkit-mask-size: cover;
+          mask-size: cover;
+}
+.list__item-icon {
+  height: 1rem;
+  width: 1rem;
+  fill: var(--primary);
+}
+
+.recommendations {
+  font-size: 1.3rem;
+  color: var(--color-grey-light-3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.recommendations__friends {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.recommendations__img {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  border: 3px solid #fff;
+}
+.recommendations__img:not(:last-child) {
+  margin-right: -2rem;
 }/*# sourceMappingURL=main.css.map */
