--- a/sass/components/_hotel-view.scss
+++ b/sass/components/_hotel-view.scss
@@ -1,8 +1,8 @@
 .gallery {
   display: flex;
 
-  &__item {
-  }
+  //   &__item {
+  //   }
 
   &__img {
     display: block;
@@ -108,4 +108,79 @@
   }
 }
 
-// DESCRIPTION //
+// PARAGRAPG //
+
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+// DESCRIPTION LIST//
+
+.list {
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  list-style-type: none;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+    flex: 0 0 50%;
+
+    margin-bottom: 0.7rem;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      height: 1rem;
+      width: 1rem;
+      margin-right: 0.7rem;
+
+      // older browsers //
+      //   background-image: url(../../img/chevron-thin-right.svg);
+      //   background-size: cover;
+
+      //new browsers//
+      background-color: var(--primary);
+      mask-image: url(../../img/chevron-thin-right.svg);
+      mask-size: cover;
+    }
+  }
+
+  &__item-icon {
+    height: 1rem;
+    width: 1rem;
+    fill: var(--primary);
+  }
+}
+
+// RECOMMENDATIONS //
+
+.recommendations {
+  font-size: 1.3rem;
+  color: var(--color-grey-light-3);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  //   &__count {
+  //   }
+
+  &__friends {
+    display: flex;
+  }
+
+  &__img {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff;
+
+    &:not(:last-child) {
+      margin-right: -2rem;
+    }
+  }
+}
