--- a/sass/globals/_layout.scss
+++ b/sass/globals/_layout.scss
@@ -34,7 +34,6 @@
 .hotel-view {
   background-color: #fff;
   flex: 1;
-  height: 80rem;
 }
 
 .details {
@@ -45,6 +44,7 @@
 }
 
 .description {
+  font-size: 1.4rem;
   background-color: #fff;
   flex: 0 0 60%;
   margin-right: 4.5rem;
