--- a/sass/components/_hotel-view.scss
+++ b/sass/components/_hotel-view.scss
@@ -1,3 +1,5 @@
+/////////////////////////////////
+/// // GALLERY //
 .gallery {
   display: flex;
 
@@ -10,6 +12,7 @@
   }
 }
 
+/////////////////////////////////
 // Overview //
 
 .overview {
@@ -69,6 +72,7 @@
   }
 }
 
+/////////////////////////////////
 // BUTTON INLINE //
 .btn-inline {
   border: none;
@@ -108,14 +112,14 @@
   }
 }
 
+/////////////////////////////////
 // PARAGRAPG //
-
 .paragraph:not(:last-of-type) {
   margin-bottom: 2rem;
 }
 
+/////////////////////////////////
 // DESCRIPTION LIST//
-
 .list {
   margin: 3rem 0;
   padding: 3rem 0;
@@ -156,11 +160,11 @@
   }
 }
 
+/////////////////////////////////
 // RECOMMENDATIONS //
-
 .recommendations {
   font-size: 1.3rem;
-  color: var(--color-grey-light-3);
+  color: var(--color-grey-dark-3);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -182,5 +186,76 @@
     &:not(:last-child) {
       margin-right: -2rem;
     }
+  }
+}
+
+/////////////////////////////////
+// USER REVIEWS //
+.user-reviews {
+  font-size: 1.4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--color-grey-light-2);
+}
+
+.review {
+  box-shadow: var(--shadow-light);
+  background-color: #fff;
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+
+  &::before {
+    content: '\201C';
+    font-size: 20rem;
+    font-family: sans-serif;
+    line-height: 1;
+    color: var(--color-grey-light-2);
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    z-index: 1;
+  }
+
+  &__text {
+    position: relative;
+    z-index: 10;
+    margin-bottom: 2rem;
+  }
+
+  &__details {
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+  }
+
+  &__img {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__user-name-date {
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 0.4rem;
+  }
+
+  &__date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-3);
+  }
+
+  &__rating {
+    font-size: 2.2rem;
+    font-weight: 300;
+    color: var(--primary);
   }
 }
