--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,12 @@ body {
           flex: 1;
 }
 
+.cta {
+  text-align: center;
+  background-color: #fff;
+  padding: 3.5rem 0;
+}
+
 /* Header, Search */
 .logo {
   height: 3.25rem;
@@ -633,4 +639,79 @@ body {
   font-size: 2.2rem;
   font-weight: 300;
   color: var(--primary);
+}
+
+.cta__text {
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  margin-bottom: 2.5rem;
+}
+
+.cta__btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #fff;
+  background-image: -webkit-gradient(linear, left top, right top, from(var(--primary-light)), to(var(--primary-dark)));
+  background-image: linear-gradient(to right, var(--primary-light), var(--primary-dark));
+  border: none;
+  border-radius: 100px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+.cta__btn > * {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+.cta__btn--visible {
+  padding: 2rem 7.5rem;
+}
+.cta__btn--invisible {
+  padding: 2rem 0;
+  position: absolute;
+  top: -100%;
+  left: 0;
+}
+.cta__btn:hover {
+  background-image: -webkit-gradient(linear, right top, left top, from(var(--primary-light)), to(var(--primary-dark)));
+  background-image: linear-gradient(to left, var(--primary-light), var(--primary-dark));
+}
+.cta__btn:hover .cta__btn--visible {
+  -webkit-transform: translateY(100%);
+      -ms-transform: translateY(100%);
+          transform: translateY(100%);
+}
+.cta__btn:hover .cta__btn--invisible {
+  top: 0;
+}
+.cta__btn:focus {
+  outline: none;
+  -webkit-animation: pulsate 1s infinite;
+          animation: pulsate 1s infinite;
+}
+
+@keyframes pulsate {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  50% {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+    -webkit-box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+            box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
 }/*# sourceMappingURL=main.css.map */
