--- a/sass/components/_hotel-view.scss
+++ b/sass/components/_hotel-view.scss
@@ -1,3 +1,5 @@
+@use '../globals/base' as b;
+
 /////////////////////////////////
 /// // GALLERY //
 .gallery {
@@ -192,11 +194,11 @@
 /////////////////////////////////
 // USER REVIEWS //
 .user-reviews {
-  font-size: 1.4rem;
+  // font-size: 1.4rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--color-grey-light-2);
+  // background-color: var(--color-grey-light-2);
 }
 
 .review {
@@ -205,17 +207,11 @@
   padding: 3rem;
   margin-bottom: 3.5rem;
   position: relative;
+  overflow: hidden;
 
-  &::before {
-    content: '\201C';
-    font-size: 20rem;
-    font-family: sans-serif;
-    line-height: 1;
-    color: var(--color-grey-light-2);
-    position: absolute;
-    top: -2.75rem;
-    left: -1rem;
-    z-index: 1;
+  @media only screen and (max-width: b.$bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
   }
 
   &__text {
@@ -257,5 +253,17 @@
     font-size: 2.2rem;
     font-weight: 300;
     color: var(--primary);
+  }
+
+  &::before {
+    content: '\201C';
+    font-size: 20rem;
+    font-family: sans-serif;
+    line-height: 1;
+    color: var(--color-grey-light-2);
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    z-index: 1;
   }
 }
