--- a/sass/globals/_layout.scss
+++ b/sass/globals/_layout.scss
@@ -1,10 +1,16 @@
+@use 'base' as b;
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
   background-color: var(--color-grey-light-2);
   box-shadow: var(--shadow-dark);
-
   min-height: 50rem;
+
+  @media only screen and (max-width: b.$bp-largest) {
+    margin: 0;
+    max-width: 150rem; //since 1rem is now only 8px, to keep the original size of 1200px we need 150rem to prevent the container from shrinking and background shouwing at the side //
+  }
 }
 
 .header {
@@ -20,6 +26,10 @@
 
 .content {
   display: flex;
+
+  @media only screen and (max-width: b.$bp-medium) {
+    flex-direction: column; //to move sidebar on top of main part //
+  }
 }
 
 .sidebar {
@@ -37,10 +47,15 @@
 }
 
 .details {
-  background-color: var(--color-grey-light-2);
+  font-size: 1.4rem;
+  background-color: var(--color-grey-light-1);
   padding: 4.5rem;
   display: flex;
   border-bottom: var(--line);
+
+  @media only screen and (max-width: b.$bp-medium) {
+    padding: 3rem;
+  }
 }
 
 .description {
@@ -50,6 +65,11 @@
   margin-right: 4.5rem;
   padding: 3rem;
   box-shadow: var(--shadow-light);
+
+  @media only screen and (max-width: b.$bp-medium) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
 }
 
 .user-reviews {
