--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,15 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+@media only screen and (max-width: 31.25em) {
+  .header {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: 11rem;
+    -ms-flex-line-pack: distribute;
+        align-content: space-around;
+  }
+}
 
 .content {
   display: -webkit-box;
@@ -150,6 +159,14 @@ body {
     padding: 3rem;
   }
 }
+@media only screen and (max-width: 37.5em) {
+  .details {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
 
 .description {
   font-size: 1.4rem;
@@ -168,9 +185,14 @@ body {
     margin-right: 3rem;
   }
 }
+@media only screen and (max-width: 37.5em) {
+  .description {
+    margin-right: 0;
+    margin-bottom: 3rem;
+  }
+}
 
 .user-reviews {
-  background-color: #fff;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -178,8 +200,12 @@ body {
 
 .cta {
   text-align: center;
-  background-color: #fff;
   padding: 3.5rem 0;
+}
+@media only screen and (max-width: 56.25em) {
+  .cta {
+    padding: 2.5rem 0;
+  }
 }
 
 /* Header, Search */
@@ -201,6 +227,17 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 40%;
           flex: 0 0 40%;
+}
+@media only screen and (max-width: 31.25em) {
+  .search {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+  }
 }
 .search__input {
   font-family: inherit;
@@ -320,6 +357,7 @@ body {
   border-radius: 50%;
   margin-right: 1rem;
 }
+
 .side-nav {
   list-style: none;
   font-size: 1.4rem;
@@ -399,10 +437,26 @@ body {
     padding: 2rem;
   }
 }
+@media only screen and (max-width: 37.5em) {
+  .side-nav__link:link, .side-nav__link:visited {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 1.5rem 0.5rem;
+    gap: 0.7rem;
+  }
+}
 .side-nav__icon {
   height: 1.75rem;
   width: 1.75rem;
   fill: currentColor;
+}
+@media only screen and (max-width: 56.25em) {
+  .side-nav__icon {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
 }
 .legal {
   color: var(--color-grey-light-4);
@@ -441,6 +495,12 @@ body {
   font-size: 2.25rem;
   font-weight: 300;
   padding: 1.5rem 3rem;
+}
+@media only screen and (max-width: 56.25em) {
+  .overview__heading {
+    font-size: 1.8rem;
+    padding: 1.25rem 2rem;
+  }
 }
 .overview__stars {
   display: -webkit-box;
@@ -484,15 +544,29 @@ body {
   background-color: var(--primary);
   color: #fff;
 }
+@media only screen and (max-width: 56.25em) {
+  .overview__rating {
+    padding: 0 1.5rem;
+  }
+}
 .overview__rating-average {
   font-size: 2.25rem;
   font-weight: 300;
   margin-bottom: -3px;
 }
+@media only screen and (max-width: 56.25em) {
+  .overview__rating-average {
+    font-size: 1.8rem;
+  }
+}
 .overview__rating-count {
-  display: block;
   font-size: 0.8rem;
   text-transform: uppercase;
+}
+@media only screen and (max-width: 56.25em) {
+  .overview__rating-count {
+    font-size: 0.5rem;
+  }
 }
 
 .btn-inline {
