--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,3 +1,5 @@
+@use '../globals/base' as b;
+
 /* Header, Search */
 .logo {
   height: 3.25rem;
@@ -10,6 +12,12 @@
   align-items: center;
 
   flex: 0 0 40%;
+
+  @media only screen and (max-width: b.$bp-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+  }
 
   &__input {
     font-family: inherit;
@@ -108,10 +116,10 @@
     justify-content: center;
   }
 
-  &__user {
-    // display: flex;
-    // align-items: center;
-  }
+  // &__user {
+  //   // display: flex;
+  //   // align-items: center;
+  // }
 
   &__user-photo {
     height: 3.75rem;
@@ -119,6 +127,6 @@
     margin-right: 1rem;
   }
 
-  &__user-name {
-  }
+  // &__user-name {
+  // }
 }
