--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -53,34 +53,40 @@
     align-items: center;
     gap: 2rem;
 
+    text-decoration: none;
+    color: var(--color-grey-light-1);
+    text-transform: uppercase;
+    padding: 1.5rem 3rem;
+
+    position: relative;
+    z-index: 10;
+
     @media only screen and (max-width: b.$bp-medium) {
       justify-content: center;
       padding: 2rem;
     }
 
-    text-decoration: none;
-    color: var(--color-grey-light-1);
-    text-transform: uppercase;
-    // font-size: 1.7rem;
-    padding: 1.5rem 3rem;
-
-    position: relative;
-    z-index: 10;
+    @media only screen and (max-width: b.$bp-small) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
+      gap: 0.7rem;
+    }
   }
 
   &__icon {
     height: 1.75rem;
     width: 1.75rem;
     fill: currentColor;
+
+    @media only screen and (max-width: b.$bp-medium) {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 
   &__text {
   }
 }
-
-// .side-nav__item {
-//   padding: 1.5rem 2rem;
-// }
 
 .legal {
   color: var(--color-grey-light-4);
