--- a/sass/globals/_layout.scss
+++ b/sass/globals/_layout.scss
@@ -22,6 +22,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: b.$bp-smallest) {
+    flex-wrap: wrap;
+    height: 11rem;
+    align-content: space-around;
+  }
 }
 
 .content {
@@ -56,6 +62,10 @@
   @media only screen and (max-width: b.$bp-medium) {
     padding: 3rem;
   }
+
+  @media only screen and (max-width: b.$bp-small) {
+    flex-direction: column;
+  }
 }
 
 .description {
@@ -70,15 +80,23 @@
     padding: 2rem;
     margin-right: 3rem;
   }
+
+  @media only screen and (max-width: b.$bp-small) {
+    margin-right: 0;
+    margin-bottom: 3rem;
+  }
 }
 
 .user-reviews {
-  background-color: #fff;
+  // background-color: #fff;
   flex: 1;
 }
 
 .cta {
   text-align: center;
-  background-color: #fff;
   padding: 3.5rem 0;
+
+  @media only screen and (max-width: b.$bp-medium) {
+    padding: 2.5rem 0;
+  }
 }
