--- a/sass/components/_hotel-view.scss
+++ b/sass/components/_hotel-view.scss
@@ -161,14 +161,19 @@
       width: 1rem;
       margin-right: 0.7rem;
 
-      // older browsers //
-      //   background-image: url(../../img/chevron-thin-right.svg);
-      //   background-size: cover;
+      // Older browsers
+      background-image: url(../img/chevron-thin-right.svg);
+      background-size: cover;
 
-      //new browsers//
-      background-color: var(--primary);
-      mask-image: url(../../img/chevron-thin-right.svg);
-      mask-size: cover;
+      //Newer browsers - masks
+      @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+        background-color: var(--primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size: cover;
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size: cover;
+        background-image: none;
+      }
     }
   }
 
